--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign-up Form</title>
   <link rel="stylesheet" href="styles.css"/>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 </head>
 <body>
   <div class="main">
@@ -20,7 +23,7 @@
       <p class="bold">You <span class="italic">know</span> you want to.</p>
       <div class="form-container">
         <p class="bold">Let's do this!</p>
-        <form id="account-creation" action="" method="post">
+        <form id="account-creation" class="roboto-medium" action="" method="post">
           <div>
             <div>
               <label for="first-name">First Name</label>
@@ -35,6 +38,7 @@
             <div>
               <label for="email">Email</label>
               <input type="email" id="email" name="email" required>
+              <span></span>
             </div>
             <div>
               <label for="phone">Phone Number</label>
@@ -44,17 +48,19 @@
           <div>
             <div>
               <label for="password">Password</label>
-              <input type="password" id="password" name="password">
+              <input type="password" id="password" name="password" required>
+              <span></span>
             </div>
             <div>
               <label for="password-confirm">Confirm Password</label>
-              <input type="password-confirm" id="password-confirm" name="password-confirm"></input>
+              <input type="password-confirm" id="password-confirm" name="password-confirm" required></input>
+              <span></span>
             </div>
           </div>
         </form>
       </div>
       <button type="submit" form="account-creation">Create Account</button>
-      <p>Already have an account? <a href="">Log in</a></p>
+      <p>Already have an account? <a class="link" href="">Log in</a></p>
     </div>
   </div>
 </body>
